# test_script

./: CONTRIBUTING.md  Cargo.toml  EXITCODES.md  README.md  \  credits.md  documentation.md  input_test  input_test.c  test.tesc
examples/: echo.tesc  for.tesc  function.tesc  global_constants.tesc  if.tesc  operators.tesc  print.tesc  type_casting.tesc  variables.tesc
src/: cli.rs  environment.rs  error.rs  exitcode.rs  instruction.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  process.rs  regex.rs  struct  struct.rs  test.rs  token.rs  type.rs  type_checker.rs  variable.rs  white_listed_constants.rs
src/instruction/: binary_operation.rs  block.rs  boolean.rs  builtin.rs  conditional.rs  float.rs  for.rs  function.rs  function_call.rs  integer.rs  mod.rs  paren.rs  regex.rs  string.rs  test.rs  type_cast.rs  unary.rs  unary_operation.rs  variable.rs
src/instruction/assignment/: iterable_assignment.rs  mod.rs
src/instruction/binary/: addition.rs  and.rs  division.rs  equal.rs  equality.rs  greater_than.rs  greater_than_or_equal.rs  greater_than_or_equality.rs  less_than.rs  less_than_or_equal.rs  less_than_or_equality.rs  mod.rs  modulo.rs  multiplication.rs  non_equality.rs  not_equal.rs  or.rs  subtraction.rs
src/type/: mod.rs
