[package]
name = "test-script"
license = "MIT"
description = "Testing programming language for IO"
version = "0.2.2"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
colored = "3.0.0"
indexmap = "2.6.0"
itertools = "0.14.0"
regex-syntax = "0.8.5"

[package.metadata.deb]
copyright = "2024, Hugo Lindström <huggepugge1@gmail.com>"
maintainer = "Hugo Lindström <huggepugge1@gmail.com>"
extended-description = """Testing programming language for IO"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
 ["target/release/test-script", "usr/bin/", "755"],
]
